--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,10 +16,6 @@ body {
 
 }
 
-body {
-  zoom: 0.6;
-}
-
 a {
   color: inherit;
   text-decoration: none;
