--- a/styles/layout.module.css
+++ b/styles/layout.module.css
@@ -1,4 +1,5 @@
 .container {
   min-height: 100vh;
   position: relative;
+  zoom: 0.75;
 }
